# configtpl_py

./: .pre-commit-config.yaml  .ruff.toml  AGENTS.md  Cargo.toml  README.md  launcher.py  pyproject.toml  pyrightconfig.json
docs/examples/00_sample/: Makefile  main.py
docs/examples/readme/: app.py  my_first_config.cfg  my_second_config.cfg  run.sh
src/: config_builder.rs  lib.rs
src/configtpl/: config_builder.py  main.py
src/configtpl/utils/: dicts.py
tests/functional/: run.py
tests/functional/test_0000_simple/: test.py
tests/functional/test_0001_combined_cfg/: test.py
tests/functional/test_0002_std_funcs/: test.py
tests/functional/test_0004_custom_funcs/: test.py
tests/functional/test_0005_render_str/: test.py
tests/unit/configtpl/: test_config_builder.py  test_env.py  test_main.py
tests/unit/configtpl/jinja/: test_globals.py
tests/unit/configtpl/utils/: test_dicts.py
