[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "configtpl"
version = "2.0.0"
authors = [
  { name="Ignytis", email="155588001+ignytis@users.noreply.github.com" },
]
description = "Configuration builder which combines features of Jinja and YAML"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "Jinja2>=3.0.0,<4.0.0",
  "PyYAML>=5.1.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
  # NB: keep it the same as in pre-commit-config.yaml
  "ruff==0.14.3",
  "pytest",
  "pre_commit",
]

[project.urls]
Homepage = "https://github.com/ignytis/configtpl_py"

[tool.hatch.build]
only-packages = true
